vcs/specs/parser/fail/async/invalid_select_empty.vr
// @test: parse-fail
// @level: L0
// @tags: parser, async, select, empty, error
// @description: Test select with no arms
// @expected-error: E0A8

async fn test() {
    // select requires at least one arm
    select {
    }
}
